test/errors/array_types_error/zs/packed_array_string_error.zs
package packed_array_string_error;

struct PackedArrayStringError
{
    packed string array[];
};
